[package]
name = "rulette"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.0"
zipf = "6.1.0"
lru = "0.4.3"
rand = "0.7.3"
